feat(repo): 新增多租户支持、国际化与性能优化
- 新增多租户架构支持，实现租户隔离与配额管理
- 新增国际化(i18n)支持，提供中英文语言包
- 新增JWT黑名单、OAuth2、LDAP认证等安全增强
- 新增虚拟线程配置与监控，提升并发性能
- 新增存储策略模式，支持本地与OSS双存储切换
- 新增布隆过滤器与Redis缓存配置
- 新增Prometheus监控与Grafana仪表盘
- 新增前端渐进式图片加载与Web Vitals采集